--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,12 @@
         android:theme="@style/Theme.ProyectoEncuesta"
         tools:targetApi="31" >
         <activity
-            android:name=".login"
-            android:exported="false" />
-        <activity
-            android:name=".ui.login.loginA"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name=".login"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
