--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:theme="@style/Theme.ProyectoEncuesta"
         tools:targetApi="31">
         <activity
-            android:name=".menuDocente"
+            android:name=".vistaDocente"
+            android:exported="false" />
+        <activity
+            android:name=".vistaEstudiante"
             android:exported="false" />
         <activity
             android:name=".pantallaBienvenida"
@@ -25,6 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+
             android:exported="false" />
     </application>
 
