--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,6 @@
             android:name=".vistaEstudiante"
             android:exported="false" />
         <activity
-            android:name=".encuestaLista"
-            android:exported="false" />
-        <activity
             android:name=".materiaActualizar"
             android:exported="false" />
         <activity
@@ -49,6 +46,15 @@
             android:exported="false" />
         <activity
             android:name=".usuarioInsertar"
+            android:exported="false" />
+        <activity
+            android:name=".crearEncuesta"
+            android:exported="false" />
+        <activity
+            android:name=".eliminarEncuesta"
+            android:exported="false" />
+        <activity
+            android:name=".encuestaLista"
             android:exported="false" />
         <activity
             android:name=".pantallaBienvenida"
