Agregar libreria Lottie
Agregar libreria lottie
Agregar icono
Agregar botones

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconoapp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoEncuesta"
         tools:targetApi="31">
+
         <activity
             android:name=".vistaDocente"
             android:exported="false" />
@@ -58,23 +59,26 @@
             android:exported="false" />
         <activity
             android:name=".agregarPreguntaVyF"
-            android:exported="false"/>
+            android:exported="false" />
+
         <activity
             android:name=".agregarPreguntaResCorta"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".pantallaBienvenida"
-            android:exported="true">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".animacionLottie"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="false" />
     </application>
 
