Agrega tipor de pregunta, Multimedia

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -64,6 +65,9 @@
 
         <activity
             android:name=".agregarPreguntaResCorta"
+            android:exported="false" />
+        <activity
+            android:name=".agregarPreguntaMultimedia"
             android:exported="false" />
         <activity
             android:name=".pantallaBienvenida"
