agregar encuesta audio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
+
 
     <application
         android:allowBackup="true"
@@ -71,7 +74,7 @@
             android:name=".agregarPreguntaMultimedia"
             android:exported="false" />
         <activity
-            android:name=".preguntaAudio"
+            android:name=".AgregarAudioPregunta"
             android:exported="false" />
 
         <activity
