Responder preguntas Multimedia completado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,9 @@
         <activity
             android:name=".preguntaAudio"
             android:exported="false" />
-
+        <activity
+            android:name=".preguntaResMultimedia"
+            android:exported="false" />
         <activity
             android:name=".pantallaBienvenida"
             android:exported="false">
