--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,9 @@
             android:name=".preguntaResMultimedia"
             android:exported="false" />
         <activity
+            android:name=".preguntaAudio"
+            android:exported="false" />
+        <activity
             android:name=".pantallaBienvenida"
             android:exported="false">
         </activity>
