--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoEncuesta"
-        tools:targetApi="31">
+        android:requestLegacyExternalStorage="true">
+
 
         <activity
             android:name=".vistaDocente"
